--- a/templates/simple-af.html
+++ b/templates/simple-af.html
@@ -1,10 +1,24 @@
 <html>
 <head>
+
 <script type="text/javascript" src="cmu-graphics-for-test.js"></script>
-<script type="text/javascript" src="animation-framework-dev.js"></script> 
+<script type="text/javascript" src="animation-framework-dev.js"></script>
+<input type="button" name="btnSeven" id="btnSeven" value="click me">
+
+<textarea contenteditable="true" id="box" name="text" style="height:350px;width:350px" #pythoncode></textarea>
+
+<script type="text/javascript">
+document.getElementById('btnSeven').addEventListener('click', function(){
+        var data = document.getElementById('box').value;
+	initCmuGraphics({localFramework: true})
+	brython({debug: 1, indexedDB: false })
+	setupAppTargetEvents();
+	runCode(data);
+    }); 
+</script>
+
 <script type="text/javascript">
 /* eslint-disable */
-
 function frameworkPrintLine(event) {
     console.log(event.detail.line);
 }
@@ -13,8 +27,8 @@ function frameworkStop(event) {}
 function frameworkPause(event) {}
 function frameworkUnpause(event) {}
 
-function runCode() {
-    var snippets = [{ code: '', mode: 'py'}];
+function runCode(data) {
+    var snippets = [{ code: data , mode: 'py'}];
     postToIDE('brythonRunCode', {
         snippets : snippets,
         resetGlobals : true
@@ -25,24 +39,19 @@ window.onload = () => {
   initCmuGraphics({localFramework: true});
   brython({ debug: 1, indexedDB: false });
   setupAppTargetEvents();
-  setupCanvasEvents();
-  runCode();
+  //setupCanvasEvents();
+  //runCode();
 };
 </script>
 
-<script type="text/python">
-from browser import window, document
-from cmu_graphics_bry import compilePyCode
-window.py2js = compilePyCode
-</script>
-</head>
+
 <body>
     <!-- Target nodes for event dispatching -->
     <div id="application-target"></div>
     <div id="brython-target"></div>
     <div style="display:flex;align-items:center;justify-content:center;">
         <div style="display:flex;align-self:flex-start"></div>
-        <canvas id="userCanvas" width="400" height="400", style="border:1px solid #000000;"></canvas>
+        <canvas id="userCanvas" width="400" height="400"></canvas>
         <div style="display:flex;align-self:flex-end"></div>
     </div>
 </body>
